--- a/screen.css
+++ b/screen.css
@@ -8,12 +8,12 @@ html {
 }
 
 h1 {
-  color: blue;
+  /* color: blue; */
   /* background-color: seashell;
   border: 3px solid black;
   padding: 30px 0px 30px 0px; */
-  width: 50%;
-  text-align: center;
+  /* width: 50%; */
+  /* text-align: center; */
   margin: auto;
   font-size: 40px;
 }
@@ -23,4 +23,5 @@ h1 {
   width: 60%;
   border: 3px solid #73ad21;
   padding: 10px;
+  text-align: center;
 }
