--- a/screen.css
+++ b/screen.css
@@ -20,8 +20,8 @@ h1 {
 
 .center {
   margin: auto;
-  width: 60%;
+  /* width: 60%;
   border: 3px solid #73ad21;
-  padding: 10px;
+  padding: 10px; */
   text-align: center;
 }
