--- a/screen.css
+++ b/screen.css
@@ -66,3 +66,17 @@ h1 {
   border-bottom: 3px solid black;
   margin-bottom: 1rem;
 }
+
+@media only screen and (max-width: 750px) {
+  .about {
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    img {
+      width: 50%;
+    }
+    p {
+      width: 90%;
+    }
+  }
+}
