--- a/screen.css
+++ b/screen.css
@@ -8,12 +8,6 @@ html {
 }
 
 h1 {
-  /* color: blue; */
-  /* background-color: seashell;
-  border: 3px solid black;
-  padding: 30px 0px 30px 0px; */
-  /* width: 50%; */
-  /* text-align: center; */
   margin: auto;
   font-size: 40px;
 }
@@ -27,9 +21,6 @@ h1 {
 
 .center {
   margin: auto;
-  /* width: 60%;
-  border: 3px solid #73ad21;
-  padding: 10px; */
   text-align: center;
 }
 
@@ -77,6 +68,23 @@ h1 {
     }
     p {
       width: 90%;
+    }
+  }
+}
+
+@media only screen and (min-width: 750px) {
+  .portfolio {
+    width: 100%;
+    ul {
+      display: flex;
+      width: 100%;
+      list-style-type: none;
+      li {
+        border: 3px solid green;
+        padding: 4px;
+        margin: 2px;
+        width: 50%;
+      }
     }
   }
 }
