--- a/screen.css
+++ b/screen.css
@@ -29,7 +29,7 @@ h1 {
   flex: auto;
   justify-content: space-around;
   margin-top: 1.5rem;
-  p {
+  .bio {
     width: 60%;
     padding: 20px;
     margin-top: 1rem;
@@ -66,7 +66,7 @@ h1 {
     img {
       width: 50%;
     }
-    p {
+    .bio {
       width: 90%;
     }
   }
