--- a/screen.css
+++ b/screen.css
@@ -47,7 +47,7 @@ h1 {
   width: 100%;
   justify-content: space-around;
   a {
-    width: 20%;
+    /* width: 20%; */
     padding: 2rem;
   }
 }
@@ -60,11 +60,13 @@ h1 {
 
 @media only screen and (max-width: 750px) {
   .about {
-    flex-direction: column;
+    /* flex-direction: column; */
+    display: grid;
     width: 100%;
     justify-content: center;
     img {
       width: 50%;
+      justify-self: center;
     }
     .bio {
       width: 90%;
